--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redux-clue",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "lib/index.js",
   "repository": "git@github.com:alevkon/redux-clue.git",
   "author": "Alexey Konyshev <alevkon@gmail.com>",
   "license": "MIT",
