--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.10",
     "pluralize": "^7.0.0",
     "redux": "^4.0.0",
+    "redux-clue": "0.0.25",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1"
   },
