--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-clue",
-  "version": "0.0.28",
+  "version": "0.0.29",
   "main": "lib/index.js",
   "repository": "git@github.com:alevkon/redux-clue.git",
   "author": "Alexey Konyshev <alevkon@gmail.com>",
@@ -10,7 +10,7 @@
     "test:inspect": "NODE_ENV=test node --inspect-brk node_modules/.bin/jest --runInBand "
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "0.19.0",
     "immutable": "^3.8.2",
     "lodash": "^4.17.10",
     "pluralize": "^7.0.0",
